# sobits_open_ws

./: .gitignore  README.md  start_bring_me_tabs.sh
src/sobits_open_mine/: README.md  package.xml  setup.cfg  setup.py
src/sobits_open_mine/config/: launch_arg.yaml  locations.yaml  robot.yaml  skip_state.yaml  task_params.yaml  yoloe_visual_prompt.yaml
src/sobits_open_mine/launch/: bring_me_system.launch.py
src/sobits_open_mine/sobits_open_mine/: README.md  __init__.py  bring_me_main.py  bring_me_node.py  grasp_test_node.py  ros_client.py  state_machine.py  states.py  utils.py  visual_prompt_selector.py  yoloe_visual_prompt_node.py
src/sobits_open_mine/sobits_open_mine/task_actions/: command_parser.py  door.py  exit_arena.py  grasp.py  handover.py  navigate.py  perception.py  speech.py
src/sobits_open_mine/visual_prompts/: README.md  air_freshener.bbox.yaml  chips.bbox.yaml  sponge.bbox.yaml  tea.bbox.yaml
