<?xml version="1.0"?>
<package format="3">
  <name>sobits_open_mine</name>
  <version>0.0.0</version>
  <description>Log-first Bring Me task state machine package.</description>

  <maintainer email="e2458119@soka-u.jp">haruto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sobits_interfaces</depend>
  <depend>yasmin</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
